# TransformerVariants

./: .gitignore  CONTEXT.md  HANDOFF.md  README.md  architecture-review-20260703.html  project_notes.tex  pyproject.toml
configs/: project_defaults.yaml
dashboard/: README.md  app.py  conftest.py  requirements-dev.txt  requirements.txt
docs/: AGENT_WORKFLOW.md  CLAUDE.md  CONTEXT.md  PHASE_INDEX.md  README_PHASE_DOCS.md  Run.md  STATUS.md  attentions.md  high_value_improvement_plan.md  learnings_from_project.md  notes_for_me.md  phase_00_experiment_contract.md  prd-alibi-gqa-variants.md  prd-domain-model-glossary.md  prd-evaluation-framework.md  prd-flash-attention-backend.md  project_notes.tex  skill-workflow-pattern.md
reports/: experiment_contract.md  fault_recovery_demo.json
scripts/: __init__.py  analyze_primary_statistics.py  benchmark_inference.py  build_dashboard.py  demonstrate_fault_recovery.py  evaluate.py  evaluate_moe_routing.py  evaluate_retrieval.py  export_site_assets.py  hash_dataset.py  prepare_1B_data.sh  prepare_data.py  prepare_streaming.py  retrain_v5_fixed_1B.sh  train.py  train_all_1B.sh  train_matrix.py  train_modern_all.sh  train_v2_v3.sh  train_v2_v5_sequential.sh
src/: __init__.py
tests/: __init__.py  test_ablation_variants.py  test_aggregate_across_seeds.py  test_attention_backend.py  test_attention_causality.py  test_attention_entropy.py  test_checkpoint.py  test_comparison.py  test_comparison_pareto_parity.py  test_config.py  test_data_pipeline.py  test_device.py  test_document_filter.py  test_eval_metrics.py  test_evaluate_cli.py  (+44 more)
(+131 files in other folders)
