[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-variant-l4-lab"
version = "0.1.0"
description = "Single-GPU benchmark and visualization framework for efficient Transformer variants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = [
    "tiktoken>=0.5.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
]
flash = [
    "flash-attn>=2.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "tiktoken>=0.5.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
]
viz = [
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
